send verification email

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGO_URI=mongodb://localhost:27017/beehive-scale
 PORT=8989
+# Email sending START
+MAILTRAP_USER= 1011dfeb680fee
+MAILTRAP_PASSWORD= d2bd8b29ba1812
+SERVER_AUTH_EMAIL= auth@beehive-scale.com
+# Email sending END
