Sending password reset link

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ MAILTRAP_USER= 1011dfeb680fee
 MAILTRAP_PASSWORD= d2bd8b29ba1812
 SERVER_AUTH_EMAIL= auth@beehive-scale.com
 # Email sending END
+PASSWORD_RESET_LINK=https://yourapp.com/reset-password
