--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ MAILTRAP_PASSWORD= d2bd8b29ba1812
 SERVER_AUTH_EMAIL= auth@beehive-scale.com
 # Email sending END
 PASSWORD_RESET_LINK=https://yourapp.com/reset-password
+SIGN_IN_URL=https://yourapp.com/sign-in
