Dev setup for ghydeout

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/beehive-scale
-PORT=8989
+MONGO_URI=mongodb://localhost:27017/ghydeout-db
+PORT=8990
 # Email sending START
 MAILTRAP_USER= 1011dfeb680fee
 MAILTRAP_PASSWORD= d2bd8b29ba1812
